Installed the human name parser script via composer Created a new route to instantiate the humanNameParser class Removed the call to the function getTokens Added a basic check to split the name field if a network only supports full name

--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,12 @@
   "type": "project",
   "license": "proprietary",
   "description": "A replacement for Marketo's social sign in form option",
+  "prefer-stable": true,
   "require": {
     "hybridauth/hybridauth": "^2.5",
     "slim/slim": "^2.6",
-    "vlucas/phpdotenv": "^2.0"
+    "vlucas/phpdotenv": "^2.0",
+    "davidgorges/human-name-parser": "^0.2.1"
   },
   "authors": [
     {
